--- a/navigation/schedule.html
+++ b/navigation/schedule.html
@@ -15,9 +15,7 @@ show_reading_time: false
   <h1>Schedule</h1>
 </div>
 
-<button onclick="window.location.href = '{{ site.baseurl }}/choose_classes'">
-  Change Classes
-</button>
+<!-- Styled Change Classes Button --> <div style="text-align: center; margin-top: 20px;"> <button class="change-classes-btn" onclick="window.location.href = '{{ site.baseurl }}/choose_classes'"> Change Classes </button> </div>
 
 <!-- Main Content Container -->
 <div id="contentContainer">
@@ -62,18 +60,17 @@ show_reading_time: false
     align-items: center;
   }
 
-  /* Main Content Layout */
-  #contentContainer {
+   /* Main Content Layout */
+   #contentContainer {
     display: flex;
-    justify-content: space-between; /* Ensures content is displayed side by side */
-    align-items: flex-start; /* Aligns both sections at the top */
+    justify-content: space-between; /* Ensures dropdowns and timer are side by side */
+    align-items: flex-start; /* Aligns content to the top */
     width: 80%;
     max-width: 1200px;
     margin: 0 auto;
   }
 
-  /* Timer Section */
-  .timer-section {
+ .timer-section {
     width: 70%; /* Adjusts the width of the timer section */
     display: flex;
     justify-content: center;
@@ -92,6 +89,32 @@ show_reading_time: false
     color: white;
     text-shadow: 0 0 10px #1e90ff, 0 0 20px #1e90ff, 0 0 30px #1e90ff;
     padding: 10px;
+  }
+
+   /* Button Styling */
+  .change-classes-btn {
+    margin-top: 30px; /* Space above the button */
+    display: block;
+    margin-left: auto;
+    margin-right: auto; /* Centers the button horizontally */
+    width: 80%; /* Matches the content width */
+    max-width: 400px;
+    padding: 15px 20px;
+    background: #1e90ff;
+    color: white;
+    font-size: 1.2rem;
+    text-align: center;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  }
+
+  .change-classes-btn:hover {
+    background: #156cc4;
+    transform: scale(1.05);
+    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.4);
   }
 
   /* Dropdown Section */
